feat: 添加云函数支持并重构请求逻辑
重构了前端请求逻辑，将原有的HTTP请求替换为云函数调用。新增了多个云函数用于处理文章、周报的获取、搜索、邮件解析、文章抓取及AI分析等功能。同时更新了相关配置文件以支持云开发环境。

--- a/CDCWeekly/frontend/project.config.json
+++ b/CDCWeekly/frontend/project.config.json
@@ -1,7 +1,8 @@
 {
   "description": "项目配置文件",
   "packOptions": {
-    "ignore": []
+    "ignore": [],
+    "include": []
   },
   "setting": {
     "urlCheck": false,
@@ -43,35 +44,12 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wx123456789",
+  "appid": "wx5c5e15b6f9610c16",
   "projectname": "疾控周报速递",
-  "debugOptions": {
-    "hidedInDevtools": []
-  },
-  "scripts": {},
-  "staticServerOptions": {
-    "baseURL": "",
-    "servePath": ""
-  },
-  "isGameTourist": false,
-  "condition": {
-    "search": {
-      "list": []
-    },
-    "conversation": {
-      "list": []
-    },
-    "game": {
-      "list": []
-    },
-    "plugin": {
-      "list": []
-    },
-    "gamePlugin": {
-      "list": []
-    },
-    "miniprogram": {
-      "list": []
-    }
+  "cloudfunctionRoot": "cloudfunctions/",
+  "condition": {},
+  "editorSetting": {
+    "tabIndent": "insertSpaces",
+    "tabSize": 2
   }
 }
